<resources>
    <string name="config_tether_apndata" />
    <string name="drm_license_not_valid">Sorry, you have no license for this file.</string>
    <string name="drm_license_expired">The license for this file has expired.</string>
    <string name="drm_file_locked">File Locked</string>
    <string name="details_page_title">Details</string>
    <string name="details_page_close">Close</string>
    <string name="details_page_renew">Renew</string>
    <string name="button_caption_no">No</string>
    <string name="button_caption_yes">Yes</string>
    <string name="button_caption_ok">OK</string>
    <string name="button_caption_cancel">Cancel</string>
    <string name="button_caption_skip">Skip</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="sign_in_to" formatted="false">Sign in to%s1\"%s2\"</string>
    <string name="drm_license_info_title">Title:</string>
    <string name="drm_license_info_album">Album:</string>
    <string name="drm_license_info_artist">Artist:</string>
    <string name="drm_license_str">License:</string>
    <string name="drm_info_file_size">File Size:</string>
    <string name="drm_info_image_resolution">Resolution:</string>
    <string name="drm_info_duration">Duration:</string>
    <string name="drm_info_frame_rate">Frame Rate:</string>
    <string name="drm_info_bit_rate">Bit rate:</string>
    <string name="drm_info_format">Format:</string>
    <string name="drm_info_codec">Codec:</string>
    <string name="drm_info_description">Description:</string>
    <string name="drm_info_vendor">Vendor:</string>
    <string name="drm_info_more_info_link">More Info</string>
    <string name="drm_info_version">Version:</string>
    <string name="drm_info_location">Location:</string>
    <string name="drm_info_shooting_location">Shooting Location:</string>
    <string name="drm_info_real_location">Real Location:</string>
    <string name="drm_info_fictional_location">Fictional Location:</string>
    <string name="drm_info_profile">Profile:</string>
    <string name="drm_info_recording_year">Recording Year:</string>
    <string name="drm_info_copyright_notice">Copyright Notice:</string>
    <string name="drm_info_author">Author:</string>
    <string name="drm_info_composer">Composer:</string>
    <string name="drm_info_genre">Genre:</string>
    <string name="drm_info_track_no">Track No.:</string>
    <string name="drm_info_rating">Rating:</string>
    <string name="drm_info_date_taken">Date Taken:</string>
    <string name="drm_info_purchase_id">Purchase Id:</string>
    <string name="drm_info_dimension_x">%1$d x %2$d</string>
    <string name="drm_info_ms">%1$02d:%2$02d</string>
    <string name="drm_info_hms">%1$d:%2$02d:%3$02d</string>
    <string name="drm_info_fps">%1$d fps</string>
    <string name="drm_info_kbps">%1$d Kbps</string>
    <string name="drm_info_mbps">%1$g Mbps</string>
    <string name="IDS_DX_SECOND">%1 second</string>
    <string name="IDS_DX_SECONDS">%1 seconds</string>
    <string name="IDS_DX_MINUTE">%1 minute</string>
    <string name="IDS_DX_MINUTES">%1 minutes</string>
    <string name="IDS_DX_HOUR">%1 hour</string>
    <string name="IDS_DX_HOURS">%1 hours</string>
    <string name="IDS_DX_DAY">%1 day</string>
    <string name="IDS_DX_DAYS">%1 days</string>
    <string name="IDS_DX_MONTH">%1 month</string>
    <string name="IDS_DX_MONTHS">%1 months</string>
    <string name="IDS_DX_YEAR">%1 year</string>
    <string name="IDS_DX_YEARS">%1 years</string>
    <string name="IDS_DX_TIME">%1 time</string>
    <string name="IDS_DX_TIMES">%1 times</string>
    <string name="IDS_DX_RIGHTS_RECEIVED_SUCCESSFULLY">License installed successfully</string>
    <string name="IDS_DX_UI_RI_ALIAS_ALTERNATIVE">the server</string>
    <string name="IDS_DX_REGISTRATION_COMPLETE">The device is registered to %1</string>
    <string name="IDS_DX_JOIN_DOMAIN_COMPLETE">The device is now part of %1</string>
    <string name="IDS_DX_LEAVE_DOMAIN_COMPLETE">The device has left %1</string>
    <string name="IDS_DX_RIGHTS_UPLOADING_COMPLETE">Licenses were uploaded successfully.</string>
    <string name="IDS_DX_RIGHTS_METERING_COMPLETE">Usage data was sent to %1</string>
    <string name="IDS_DX_RIGHTS_IDENTIFYING_COMPLETE">Device was identified to %1</string>
    <string name="IDS_DX_FILE_LOCKED_RIGHTS_PENDING">"%1 is locked.
License will arrive shortly."</string>
    <string name="IDS_DX_FILE_DOWNLOADED_GET_USE_CONSENT">Download complete.</string>
    <string name="IDS_DX_REGISTER_DEVICE">Do you want to register to %1?</string>
    <string name="IDS_DX_REGISTER_FOR_JOIN_DOMAIN" formatted="false">"In order to connect to %1 you need to register to %2.
Register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_LEAVE_DOMAIN" formatted="false">"In order to leave %1 you need to register to %2.
Register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_RO_ACQUISITION" formatted="false">"In order to acquire %1 you need to register to %2.
Register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_EMBEDDED_RIGHTS">"The file contains embedded rights.
To install them you need to register to %1.
Do you want to register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_RO_INSTALLATION">"You have just received new license.
To install it you need to register to %1.
Register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_RO_UPLOAD">"In order to upload licenses you need to register to %1.
Register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_METERING">"In order to send content usage data you need to register to %1.
Register now?"</string>
    <string name="IDS_DX_REGISTER_FOR_CONTENT_UNLOCK">"In order to unlock this file you need to register to %1.
Register now?"</string>
    <string name="IDS_DX_METERING_CONSENT_OPTIONAL">Do you allow %1 to collect information regarding your content usage habits?</string>
    <string name="IDS_DX_METERING_CONSENT">In order to use this file %1 needs to collect information regarding your content usage habits. Do you agree?</string>
    <string name="IDS_DX_IDENTIFICATION_CONSENT">Do you want to identify the device to %1?</string>
    <string name="IDS_DX_RO_UPLOAD_CONSENT">Do you want to upload your licenses to %1?</string>
    <string name="IDS_DX_DOMAIN_JOIN">Do you want to connect to %1?</string>
    <string name="IDS_DX_DOMAIN_LEAVE">Do you want to leave %1?</string>
    <string name="IDS_DX_DOMAIN_JOIN_FOR_RO_ACQUISITION" formatted="false">"In order to acquire %1 you have to connect to %2.
Connect now?"</string>
    <string name="IDS_DX_DOMAIN_JOIN_FOR_EMBEDDED_RIGHTS">"The file contains embedded license.
To install it you have to connect to %1.
Connect now?"</string>
    <string name="IDS_DX_DOMAIN_JOIN_FOR_RIGHTS_INSTALLATION">"You have just received new license.
To install it you have to connect to %1.
Connect now?"</string>
    <string name="IDS_DX_DOMAIN_JOIN_FOR_PREVIEW">"To preview the content you need to connect to %1.
Connect now?"</string>
    <string name="IDS_DX_OPERATION_REGISTER">Registering device...</string>
    <string name="IDS_DX_OPERATION_JOIN_DOMAIN">Connecting Device Network...</string>
    <string name="IDS_DX_OPERATION_LEAVE_DOMAIN">Leaving Device Network...</string>
    <string name="IDS_DX_OPERATION_RIGHTS_ACQ">Acquiring License...</string>
    <string name="IDS_DX_OPERATION_IDENTIFICATION">Identifying Device...</string>
    <string name="IDS_DX_OPERATION_METERING">Sending content usage data...</string>
    <string name="IDS_DX_OPERATION_RIGHTS_UPLOAD">Uploading Licenses...</string>
    <string name="IDS_DX_ERROR_GENERAL_FAILURE">Operation Failed</string>
    <string name="IDS_DX_ERROR_GENERAL_FAILURE_REASON">Failure Reason:</string>
    <string name="IDS_DX_OPERATION_PROCESSING">Processing...</string>
    <string name="IDS_DX_KEYWORD_THIS_LICENSE">this license</string>
    <string name="IDS_DX_SHOW_LICENSE_USE">Use</string>
    <string name="IDS_DX_SHOW_LICENSE_PLAY">Play</string>
    <string name="IDS_DX_SHOW_LICENSE_DISPLAY">Display</string>
    <string name="IDS_DX_SHOW_LICENSE_PRINT">Print</string>
    <string name="IDS_DX_SHOW_LICENSE_EXECUTE">Execute</string>
    <string name="IDS_DX_SHOW_LICENSE_UNLIMITED_PERMISSION">Unlimited %1</string>
    <string name="IDS_DX_SHOW_LICENSE_FROM_TIME">from %1</string>
    <string name="IDS_DX_SHOW_LICENSE_UNTIL_TIME">until %1</string>
    <string name="IDS_DX_SHOW_LICENSE_FROM_FIRST_USE">for %1 from first use</string>
    <string name="IDS_DX_SHOW_LICENSE_FOR_TOTAL_OF">for a total of %1</string>
    <string name="IDS_DX_SHOW_LICENSE_CANNOT_RINGTONE">Cannot be used as ringtone</string>
    <string name="IDS_DX_SHOW_LICENSE_CAN_ONLY_RINGTONE">Can be used only as ringtone</string>
    <string name="IDS_DX_SHOW_LICENSE_CANNOT_WALLPAPER">Cannot be used as wallpaper</string>
    <string name="IDS_DX_SHOW_LICENSE_CAN_ONLY_WALLPAPER">Can be used only as wallpaper</string>
    <string name="IDS_DX_SHOW_LICENSE_STATE_NOT_VALID">Not Valid</string>
    <string name="IDS_DX_SHOW_LICENSE_STATE_SIM_MISMATCH">SIM Mismatch</string>
    <string name="IDS_DX_SHOW_LICENSE_STATE_NOT_IN_DOMAIN">Disabled</string>
    <string name="IDS_DX_SHOW_LICENSE_STATE_FUTURE">Future</string>
    <string name="IDS_DX_SHOW_LICENSE_NOT_FORWARDABLE">Cannot be sent to others.</string>
    <string name="IDS_DX_SHOW_UI_LICENSE_IS_NOT_VALID">No license available.</string>
    <string name="IDS_DX_ERROR_COMMUNICATION_FAILURE">Operation failed due to communication failure.</string>
    <string name="IDS_DX_ERROR_INSUFFICIENT_SPACE">Cannot finish download. There is not enough space.</string>
    <string name="IDS_DX_ERROR_RECEIVED_INVALID_RIGHTS">The received license is not valid and cannot be used.</string>
    <string name="IDS_DX_ERROR_RIGHTS_INVALID_CANNOT_USE_FILE">"The file cannot be used because its license is not valid.
Download was aborted."</string>
    <string name="IDS_DX_CONTENT_NOT_SUPPORTED_ON_DEVICE">Cannot download. The content is not supported on the phone.</string>
    <string name="va_cancel">Cancel</string>
    <string name="va_download">Download</string>
    <string name="welcome_page_title">Life in full view</string>
    <string name="welcome_page_detail">"Let's set up your %s!"</string>
    <string name="welcome_page_start">Get Started</string>
    <string name="welcome_page_moreinfo">Learn More</string>
    <string name="devicelist_page_passwd_instruction_hint">%s requires a password to continue.</string>
    <string name="setup_ble_passwd">Password:</string>
    <string name="setup_ble_confirm_passwd">Confirm:</string>
    <string name="setup_ble_passwd_hint">Password must be at least 8 characters</string>
    <string name="setup_ble_confirm">Set password</string>
    <string name="btn_next">@string/gc_va_next</string>
    <string name="gc_no_files_all">No photos or videos</string>
    <string name="gc_camera_password">Password</string>
    <string name="gc_show_password">Show my password</string>
    <string name="gc_wifi_ssid">Network SSID</string>
    <string name="gc_wifi_security">Security</string>
    <string name="gc_wifi_identity">Identity</string>
    <string name="gc_wifi_proxy">Proxy</string>
    <string name="gc_wifi_proxy_option_none">None</string>
    <string name="gc_wifi_proxy_host_name">Proxy host name</string>
    <string name="gc_wifi_proxy_port">Proxy port</string>
    <string name="gc_android_os_version">Android 4.3+</string>
    <string name="gc_ble_version">Bluetooth 4.0</string>
    <string name="gc_wifi_direct">Wifi Direct</string>
    <string name="gc_connect_wifi_err_wrong_pw">The password or SSID you entered was incorrect. Please try again.</string>
    <string name="gc_connect_device_err_wrong_pw">The password you entered was incorrect. Please try again.</string>
    <string name="gc_install_zoe_major">Life. Remixed.</string>
    <string name="gc_install_zoe_second">Create, share and remix beautiful highlight videos with your friends.</string>
</resources>