<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/re_setup_view_bkg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:gc="http://schemas.android.com/apk/res/com.htc.gc.companion">
    <RelativeLayout android:id="@id/top_area" android:layout_width="fill_parent" android:layout_height="@dimen/gc_oobe_launcher_icon_area_height" android:layout_marginTop="@dimen/ab_height">
        <ImageView android:id="@id/logo" android:background="@drawable/re_intro_welcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:gravity="center" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_page_title" android:layout_below="@id/logo" android:layout_centerHorizontal="true" style="@style/re_07" />
    </RelativeLayout>
    <TextView android:gravity="center" android:id="@id/content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_l" android:layout_marginRight="@dimen/margin_l" android:text="@string/welcome_page_detail" android:layout_below="@id/top_area" android:layout_centerHorizontal="true" style="@style/re_secondary_l" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/margin_l" android:layout_marginTop="@dimen/margin_m_3" android:layout_marginRight="@dimen/margin_l" android:layout_below="@id/content">
        <RelativeLayout android:id="@id/check_field" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true">
            <RelativeLayout android:id="@id/os_field" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:id="@id/os_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_s" android:src="@drawable/re_indicator_delete_s" android:layout_centerVertical="true" />
                <TextView android:id="@id/os_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gc_android_os_version" android:layout_toRightOf="@id/os_status" style="@style/re_secondary_l" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/ble_field" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:layout_below="@id/os_field">
                <ImageView android:id="@id/ble_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_s" android:src="@drawable/re_indicator_delete_s" android:layout_centerVertical="true" />
                <TextView android:id="@id/ble_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gc_ble_version" android:layout_toRightOf="@id/ble_status" style="@style/re_secondary_l" />
            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:layout_below="@id/ble_field">
                <ImageView android:id="@id/wifi_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_s" android:src="@drawable/re_indicator_delete_s" android:layout_centerVertical="true" />
                <TextView android:id="@id/wifi_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gc_wifi_direct" android:layout_toRightOf="@id/wifi_status" style="@style/re_secondary_l" />
            </RelativeLayout>
        </RelativeLayout>
        <com.htc.gc.companion.ui.widget.CustomHtcRimButton android:id="@id/btn_start" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/gc_oobe_button_height" android:layout_marginBottom="@dimen/margin_s" android:text="@string/welcome_page_start" android:layout_above="@id/btn_moreinfo" gc:blue_mode="true" />
        <com.htc.gc.companion.ui.widget.CustomHtcRimButton android:layout_gravity="center_horizontal" android:id="@id/btn_moreinfo" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/gc_oobe_button_height" android:layout_marginBottom="@dimen/margin_l" android:text="@string/welcome_page_moreinfo" android:layout_alignParentBottom="true" gc:blue_mode="true" />
    </RelativeLayout>
</RelativeLayout>