<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/main_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.htc.lib1.cc.widget.HtcOverlapLayout android:orientation="vertical" android:id="@id/wrap_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.htc.gc.companion.ui.GridHeadersGridView android:scrollbarStyle="outsideOverlay" android:id="@id/gridview" android:paddingLeft="@dimen/margin_l" android:paddingRight="@dimen/margin_l" android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchMode="none" />
        <com.htc.lib1.cc.widget.HtcFooter android:id="@id/footer" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.htc.lib1.cc.widget.HtcFooterTextButton android:id="@id/cancel_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/va_cancel" />
            <com.htc.lib1.cc.widget.HtcFooterTextButton android:id="@id/confirm_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/btn_next" />
        </com.htc.lib1.cc.widget.HtcFooter>
    </com.htc.lib1.cc.widget.HtcOverlapLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/empty_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:background="@drawable/re_no_content_image" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textAppearance="@style/re_info_primary_l" android:id="@id/empty_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gc_no_files_all" android:alpha="0.5" />
    </LinearLayout>
</RelativeLayout>